--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,24 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+        classpath 'com.google.gms:google-services:1.3.0-beta1'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
     }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.7'
 }
