--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -1,23 +1,11 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
-    }
-}
 apply plugin: 'com.android.library'
-
-repositories {
-    jcenter()
-}
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23"
 
     defaultConfig {
-        minSdkVersion 13
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -47,5 +35,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.android.gms:play-services-gcm:7.8.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    compile 'com.google.android.gms:play-services-ads:8.1.0'
+    compile 'com.google.android.gms:play-services-analytics:8.1.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.kibotu:CarouselWidget:1.0.2-SNAPSHOT'
 }
