--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.kibotu:CarouselWidget:1.0.2-SNAPSHOT'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
