added few more static methods

--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 android {
     
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         minSdkVersion 15
@@ -38,16 +38,18 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.intellij:annotations:12.0'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:support-v13:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:support-v13:23.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
     compile 'com.google.android.gms:play-services-ads:8.1.0'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.kibotu:CarouselWidget:1.0.2-SNAPSHOT'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'jp.wasabeef:glide-transformations:1.2.1'
+    compile 'com.mcxiaoke.volley:library:1.0.19@aar'
 }
