added google version to manifest and added dependency locations

--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -4,6 +4,7 @@ android {
     
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         minSdkVersion 15
@@ -24,6 +25,7 @@ android {
         }
         release {
             minifyEnabled false
+            shrinkResources = false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
