--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,14 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+        classpath 'de.felixschulze.gradle:gradle-hockeyapp-plugin:3.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://jitpack.io" }
