--- a/common-android-utils/src/main/AndroidManifest.xml
+++ b/common-android-utils/src/main/AndroidManifest.xml
@@ -1,3 +1,11 @@
 <manifest
-        package="com.common.android.utils">
+        package="com.common.android.utils" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version"/>
+
+    </application>
 </manifest>
