--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -53,14 +53,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'br.com.zbra:android-linq:1.0.1'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:design:24.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
     compile 'com.github.orhanobut:hawk:1.19'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.orhanobut:wasp:1.15'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
     compile 'jp.wasabeef:glide-transformations:2.0.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
 
