--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: "me.tatarka.retrolambda"
 apply plugin: 'android-apt'
+apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
 
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
@@ -14,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         renderscriptSupportModeEnabled true
-        renderscriptTargetApi 23
+        renderscriptTargetApi 20
     }
 
     buildTypes {
@@ -53,21 +54,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'br.com.zbra:android-linq:1.0.1'
-    compile 'com.android.support:design:24.0.0-alpha1'
-    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
-    compile 'com.github.orhanobut:hawk:1.19'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.github.orhanobut:hawk:1.23'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.orhanobut:wasp:1.15'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'jp.wasabeef:glide-transformations:2.0.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
-
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
-    compile 'com.google.android.gms:play-services-analytics:8.4.0'
-
-    compile 'com.github.kibotu:net.kibotu.android.deviceinfo:1.1.1'
 }
