--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.github.orhanobut:wasp:1.15'
     compile 'com.jakewharton:butterknife:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:2.0.0'
