--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,14 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
     }
+
+    // Exclude the version that the android plugin depends on.
+    // #https://github.com/evant/gradle-retrolambda/issues/96
+    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
