--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -52,6 +52,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'br.com.zbra:android-linq:1.0.1'
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:support-v13:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.github.orhanobut:hawk:1.23'
