--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,11 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.2.0-beta1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
     }
 
     // Exclude the version that the android plugin depends on.
@@ -29,7 +28,7 @@ allprojects {
 
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.14.1'
+    gradleVersion = '3.0'
 }
 
 task clean(type: Delete) {
