--- a/common-android-utils/build.gradle
+++ b/common-android-utils/build.gradle
@@ -73,6 +73,12 @@ dependencies {
 
     // rx
     compile 'io.reactivex:rxandroid:1.2.1'
+
+    // pubnub
+    provided 'com.pubnub:pubnub:4.0.14'
+
+    // view pager easier interface
+    provided 'com.sbrukhanda.fragmentviewpager:fragmentviewpager:1.0.0'
 }
 
 retrolambda {
@@ -81,26 +87,8 @@ retrolambda {
     incremental true
 }
 
-// build a jar with source files
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
+// region javadoc
 
-task javadoc(type: Javadoc) {
-    failOnError false
-    source = android.sourceSets.main.java.sourceFiles
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
-}
+apply from: 'https://gist.githubusercontent.com/kibotu/994c9cc65fe623b76b76fedfac74b34b/raw/65ee52482ba65050e015f4b00d8d2fc9172a10e8/javadoc.gradle'
 
-// build a jar with javadoc
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
+// endregion
